PR 51724 - landisk fails to reboot.

machine_reset() - instead of trying to cause an invalid data access
that gcc will optimize away, just use "trapa" instruction.

G/c assignment to EXPEVT, it will be set by the actual reset.  That
assignment has been probably cargo-culted from cpu_reset() that
manually jumps to 0xa0000000 (the reset address) instead of triggering
a reset.

TODO: This code should be SuperH generic cpu_reset().